# marinade

./: README.md  pyproject.toml
marinade/: __init__.py  marinade.py
test/: test.py
